docs: update README

--- a/.drone.yml
+++ b/.drone.yml
@@ -89,7 +89,7 @@ steps:
         path: /var/run/docker.sock
     commands:
       - snyk test --severity-threshold=high https://github.com/gordonpn/dev-meta-search
-#      - snyk test --docker gordonpn/personal-site:latest --file=Dockerfile --exclude-base-image-vulns
+      - snyk test --docker gordonpn/dev-meta-search-site:latest --file=Dockerfile --exclude-base-image-vulns
 
 volumes:
   - name: dockersock
